remove trailing / it messes up the URI encoding

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
         disable_symlinks off;
 
         location / {
-            proxy_pass http://insights-npm-cache:9999/;
+            proxy_pass http://insights-npm-cache:9999;
         }
     }
 }
