switch to node:boron-alpine

--- a/npm_lazy/Dockerfile
+++ b/npm_lazy/Dockerfile
@@ -1,15 +1,14 @@
-FROM fedora:latest
+FROM node:boron-alpine
 
-RUN dnf update -y && dnf clean all
-RUN dnf install -y nodejs npm && dnf clean all
-RUN useradd -U -d /var/cache/npmcache -s /bin/nologin npmcache
 RUN npm install -g npm_lazy
+# RUN useradd -U -d /var/cache/npmcache -s /bin/nologin npmcache
 
 VOLUME ["/var/cache/npmcache/cache"]
 EXPOSE 9999
-
 RUN chgrp -R 0 /var/cache/npmcache && chmod -R 777 /var/cache/npmcache
+
+RUN npm install npm_lazy
 
 USER 1000
 COPY config.js /var/cache/npmcache/config.js
-CMD ["/usr/bin/node", "/usr/lib/node_modules/npm_lazy/bin/npm_lazy", "--config", "/var/cache/npmcache/config.js"]
+CMD ["/usr/local/bin/npm_lazy", "--config", "/var/cache/npmcache/config.js"]
