--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,6 +44,8 @@ http {
         disable_symlinks off;
 
         location / {
+            proxy_set_header Authorization "";
+            proxy_set_header authorization "";
             proxy_pass http://insights-npm-cache:9999;
         }
     }
