--- a/npm_lazy/Dockerfile
+++ b/npm_lazy/Dockerfile
@@ -8,6 +8,7 @@ EXPOSE 9999
 RUN chgrp -R 0 /var/cache/npmcache && chmod -R 777 /var/cache/npmcache
 
 RUN npm install npm_lazy
+# RUN sed 's|Resource.get = function(url, auth) {|Resource.get = function(url, auth) { console.log(url); console.log(auth); |' -i /usr/local/lib/node_modules/npm_lazy/lib/resource.js
 
 USER 1000
 COPY config.js /var/cache/npmcache/config.js
